--- a/style.css
+++ b/style.css
@@ -173,4 +173,11 @@ button:hover {
     border: 3px solid #002eaa;
 
 }
+
+.instructions p {
+   font-size: 1.1rem;
+   margin: 12px 0;
+   line-height: 1.6;
+   text-align: justify;
+}
  
