--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ button:hover {
 
 .instructions p {
    font-size: 1.1rem;
-   margin: 12px 0;
+   margin: 20px 0;
    line-height: 1.6;
-   text-align: justify;
+   text-align: center;
 }
  
